fix word-wrap on the rte (#389)
remove background-color from the editor when it is in read-only mode.

--- a/src/components/rich-text-editor/adapter/vue-froala.scss
+++ b/src/components/rich-text-editor/adapter/vue-froala.scss
@@ -89,6 +89,10 @@
     &--unfocused {
         overflow: hidden;
 
+        /deep/ .fr-box.fr-basic.fr-top .fr-wrapper {
+            background: unset;
+        }
+
         /deep/ .fr-sticky-dummy {
             height: 0 !important; // Fix flicking problem with multiple editors on page.
         }
